# labflow-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  overdue-samples.csv  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9c130abc5ea9_create_initial_tables.py
app/: database.py  main.py  settings.py
app/auth/: dependencies.py  security.py
app/models/: __init__.py  audit_log.py  qc_note.py  sample.py  user.py
app/routers/: audit_logs.py  auth.py  qc_notes.py  reports.py  samples.py  users.py
app/schemas/: audit_log.py  auth.py  qc_note.py  report.py  sample.py  user.py
scripts/: create_dev_users.py
tests/: conftest.py  test_auth.py  test_qc_notes.py  test_reports.py  test_samples.py  test_users.py
